# favorita-forecasting

./: .dvcignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
configs/: default.yaml
metrics/: best_params_xgboost.json  cv_results_lightgbm.json  cv_results_xgboost.json  lightgbm_importance.json  xgboost_importance.json
scripts/: plot_results.py
src/favorita_forecasting/: __init__.py  cli.py  config.py
src/favorita_forecasting/data/: __init__.py  loader.py  schemas.py  splitter.py  validator.py
src/favorita_forecasting/evaluation/: __init__.py  analysis.py  cross_validation.py  metrics.py
src/favorita_forecasting/features/: external_features.py  holiday_features.py  lag_features.py  pipeline.py  rolling_features.py  target_encoding.py  time_features.py
src/favorita_forecasting/models/: __init__.py  base.py  ensemble.py  hyperopt.py  lightgbm_model.py  xgboost_model.py
src/favorita_forecasting/pipeline/: __init__.py  predict_pipeline.py  submission.py  train_pipeline.py
src/favorita_forecasting/preprocessing/: __init__.py  cleaner.py  merger.py  transformer.py
src/favorita_forecasting/tracking/: __init__.py  mlflow_tracker.py
src/favorita_forecasting/utils/: polars_utils.py
tests/: conftest.py
tests/unit/: test_cleaner.py  test_features.py  test_metrics.py  test_splitter.py
